package hiof.gr19.seat.stubs.payment;

public abstract class PaymentMethod {
    public abstract boolean pay(String navn);
}
