@startuml

stub.confirmation.ConfirmationMethod <|-- stub.confirmation.EmailReceipt
stub.confirmation.ConfirmationMethod <|-- stub.confirmation.PrintReceipt

stub.payment.PaymentMethod <|-- stub.payment.PayWithCard
stub.payment.PaymentMethod <|-- stub.payment.PayWithCash
stub.payment.PaymentMethod <|-- stub.payment.PayWithVipps

stub.payment.BetalingsStub <-- stub.payment.PayWithCard
stub.payment.BetalingsStub <-- stub.payment.PayWithCash
stub.payment.BetalingsStub <-- stub.payment.PayWithVipps


abstract class stub.confirmation.ConfirmationMethod {
    + {abstract} sendConfirmation(Purchase purchase) : void
}
class stub.confirmation.EmailReceipt {
    - email : String

    + EmailReceipt(String email)

    + sendConfirmation(Purchase purchase) : void
}
class stub.confirmation.PrintReceipt {
    + sendConfirmation(Purchase purchase) : void
}

class stub.payment.BetalingsStub {
    - telefonnummer : int
    - navn : String

    + BetalingsStub(String navn)
    + BetalingsStub(int telefonnummer, String navn)

    + godkjentBetaling() : boolean
}
abstract class stub.payment.PaymentMethod {
    + {abstract} pay(String navn) : boolean
}
class stub.payment.PayWithCard {
    + pay(String navn) : boolean
}
class stub.payment.PayWithCash {
    + pay(String navn) : boolean
}
class stub.payment.PayWithVipps {
    - telefonnummer : int

    + PayWithVipps(int telefonnummer)

    + pay(String navn) : boolean
}

@enduml